--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
         "@koa/cors": "^3.0.0",
         "@koa/router": "^8.0.2",
         "dotenv": "^8.2.0",
+        "image-size": "^0.8.3",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
-        "mongodb": "^3.3.5"
+        "mongodb": "^3.3.5",
+        "node-fetch": "^2.6.0"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
         "jest": "^24.9.0",
-        "node-fetch": "^2.6.0",
         "nodemon": "^2.0.1",
         "prettier": "^1.19.1"
     },
